update /me and add some features
