# api/openapi.yaml
@@ -56,7 +56,32 @@ paths:
                       description: JWT for the logged in user
           '401':
             description: Login failed
-  /user:
+  /me:
+    get:
+      tags:
+        - User
+      description: Retrieve authenticated user information
+      operationId: getMe
+      security:
+        - BearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  email:
+                    type: string
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+      x-swagger-router-controller: User
+  /users:
     get:
       tags:
         - User
@@ -72,6 +97,7 @@ paths:
                   $ref: "#/components/schemas/User"
                 x-content-type: application/json
       x-swagger-router-controller: User
+  /user:
     post:
       tags:
         - User
@@ -174,7 +200,7 @@ paths:
         "200":
           description: User successfully deleted
       x-swagger-router-controller: User
-  /phone:
+  /phones:
     get:
       tags:
         - Phone
@@ -194,6 +220,7 @@ paths:
         '500':
           description: Internal server error
       x-swagger-router-controller: Phone
+  /phone:
     post:
       tags:
         - Phone
@@ -316,7 +343,7 @@ paths:
         '500':
           description: Internal server error
       x-swagger-router-controller: Phone
-  /company:
+  /companies:
     get:
       tags:
         - Company
@@ -336,6 +363,7 @@ paths:
         '500':
           description: Internal server error
       x-swagger-router-controller: Company
+  /company:
     post:
       tags:
         - Company
@@ -530,8 +558,6 @@ components:
           type: string
         password:
           type: string
-        type:
-          type: string
         company_id:
           type: integer
           format: int64
@@ -582,3 +608,13 @@ components:
           type: boolean
         case_protector:
           type: boolean
+    Me:
+      type: object
+      properties:
+        id:
+          type: string
+        email:
+          type: string
+      example:
+        id: 1
+        email:
