# routes/PhoneRouter.js
@@ -2,7 +2,7 @@ const express = require('express');
 const PhoneController = require('../Controllers/PhoneController'); 
 const router = express.Router();
 
-router.get('/phone', PhoneController.list);
+router.get('/phones', PhoneController.list);
 router.post('/phone', PhoneController.create);
 router.get('/phone/:id', PhoneController.getById);
 router.put('/phone/:id', PhoneController.update);
